Allow field name declaration in row literal
Add support for `row(a 1, b 2)` instead of the much more complex
`cast(row(1, 2) as row(a integer, b integer))`.